force-app/main/default/objects/Inventory_Position__c/Inventory_Position__c.object-meta.xml
<CustomObject>
    <description>Inventory position of a specific Medication at a specific Pharmacy Store.</description>
    <label>Inventory Position</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Inventory Position Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>