force-app/main/default/objects/Inventory_Position__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Expiry date of the current lot</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>