force-app/main/default/objects/Inventory_Position__c/fields/Medication__c.field-meta.xml
<CustomField>
    <fullName>Medication__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the Medication</description>
    <label>Medication</label>
    <referenceTo>Medication__c</referenceTo>
    <relationshipLabel>Inventory Positions</relationshipLabel>
    <relationshipName>Medication_Inventory_Positions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>