force-app/main/default/objects/Inventory_Position__c/fields/Medication_Cold_Chain__c.field-meta.xml
<CustomField>
    <fullName>Medication_Cold_Chain__c</fullName>
    <formula>Medication__r.Cold_Chain_Required__c</formula>
    <label>Cold Chain Required</label>
    <type>Checkbox</type>
</CustomField>