force-app/main/default/objects/Inventory_Position__c/fields/Medication_DEA_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Medication_DEA_Schedule__c</fullName>
    <formula>TEXT(Medication__r.DEA_Schedule__c)</formula>
    <label>DEA Schedule</label>
    <type>Text</type>
</CustomField>