force-app/main/default/objects/Inventory_Position__c/fields/Medication_Name__c.field-meta.xml
<CustomField>
    <fullName>Medication_Name__c</fullName>
    <formula>Medication__r.Name</formula>
    <label>Medication Name</label>
    <type>Text</type>
</CustomField>