force-app/main/default/objects/Inventory_Position__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <description>Long-form recommendation text for grid/agent output</description>
    <label>Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>