force-app/main/default/objects/Inventory_Position__c/fields/Recommendation_Preview__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Preview__c</fullName>
    <label>Recommendation Preview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>