force-app/main/default/objects/Inventory_Position__c/fields/Safety_Stock__c.field-meta.xml
<CustomField>
    <fullName>Safety_Stock__c</fullName>
    <description>Safety stock threshold below which replenishment is recommended</description>
    <label>Safety Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>