force-app/main/default/objects/Inventory_Position__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Computed status text based on quantity vs safety stock and expiry</description>
    <formula>IF(
    ISBLANK(Safety_Stock__c),
    &quot;UNKNOWN&quot;,
    IF(
        Quantity__c &lt;= 0,
        &quot;OUT_OF_STOCK&quot;,
        IF(
            Quantity__c &lt; Safety_Stock__c,
            &quot;LOW&quot;,
            &quot;HEALTHY&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>