force-app/main/default/objects/Inventory_Position__c/fields/Status_Color__c.field-meta.xml
<CustomField>
    <fullName>Status_Color__c</fullName>
    <description>Color code string representing status category</description>
    <formula>CASE(
    Status__c,
    &quot;OUT_OF_STOCK&quot;,&quot;RED&quot;,
    &quot;LOW&quot;,&quot;ORANGE&quot;,
    &quot;HEALTHY&quot;,&quot;GREEN&quot;,
    &quot;UNKNOWN&quot;,&quot;GRAY&quot;,
    &quot;GRAY&quot;
)</formula>
    <label>Status Color</label>
    <type>Text</type>
</CustomField>