force-app/main/default/objects/Inventory_Position__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the Pharmacy Store</description>
    <label>Store</label>
    <referenceTo>Pharmacy_Store__c</referenceTo>
    <relationshipLabel>Inventory Positions</relationshipLabel>
    <relationshipName>Inventory_Positions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>