force-app/main/default/objects/Inventory_Position__c/listViews/Inventory_Transfer_Ops.listView-meta.xml
<ListView>
    <fullName>Inventory_Transfer_Ops</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Store__c</columns>
    <columns>Medication__c</columns>
    <columns>Quantity__c</columns>
    <columns>Safety_Stock__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Color__c</columns>
    <columns>Recommendation_Preview__c</columns>
    <columns>Recommendation__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Inventory Transfer Ops</label>
</ListView>